Capped title and intro in db. Fixed a few layout issues

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -264,8 +264,13 @@ h3 span{
 }
 .hero-heading, 
 .hero-content {
-    font-weight: 600;
     margin: 1rem 2rem 2rem 2rem;
+}
+.hero-heading {
+    font-weight: 600;
+}
+.hero-content {
+    font-weight: 400;
 }
 .hero-button {
     margin: 0 2rem 4rem 2rem;
